# docker_image_memory_leak

./: Dockerfile  client.py  main.py  pyproject.toml  readme.md  run.sh
without_fastapi/: Dockerfile  main.py  pyproject.toml  run.py  run.sh
